[package]
name = "myfind"
version = "0.1.4"
authors = ["Will Shuttleworth <wps20@pitt.edu>"]
homepage = "https://github.com/willshuttleworth/myfind"
repository = "https://github.com/willshuttleworth/myfind"
license = "MIT"
readme = "README.md"
keywords = ["cli", "find", "practice"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
