[package]
name = "rfind"
description = "a simpler and faster find util"
version = "0.2.0"
authors = ["Will Shuttleworth <wps20@pitt.edu>"]
homepage = "https://github.com/willshuttleworth/myfind"
repository = "https://github.com/willshuttleworth/myfind"
license = "MIT"
readme = "README.md"
keywords = ["cli", "find", "practice"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
jwalk = "0.8.1"
