[package]
name = "findrs"
description = "a simpler and faster find util"
version = "0.3.1"
authors = ["Will Shuttleworth <wshuttleworth@pitt.edu>"]
homepage = "https://github.com/willshuttleworth/rsfind"
repository = "https://github.com/willshuttleworth/rsfind"
license = "MIT"
readme = "README.md"
keywords = ["cli", "find"]
categories = ["command-line-utilities"]
edition = "2024"

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
jwalk = "0.8.1"
